export const snapshot = {};

snapshot[`bool 1`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "",
      type: "boolean",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`bool 2`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "Description one.",
      type: "boolean",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`bool 3`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "Description two. Description one.",
      type: "boolean",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`none 1`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "",
      type: "null",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`none 2`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "Description one.",
      type: "null",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`none 3`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "Description two. Description one.",
      type: "null",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`num 1`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "",
      type: "number",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`num 2`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "Description one.",
      type: "number",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`num 3`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "Description two. Description one.",
      type: "number",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`str 1`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "",
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`str 2`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "Description one.",
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`str 3`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    value: {
      description: "Description two. Description one.",
      type: "string",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;
